first attempt at xtdb v2 port